Side bar no longer causes the horizontal scrolling on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0px;
+  position: relative;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -32,6 +33,10 @@ nav{
 
 .nav-items li{
   list-style: none;
+}
+
+.nav-item a{
+  cursor: pointer;
 }
 
 a{
